# litestar-vite

./: .gitignore  .npmignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.rst  Makefile  README.md  biome.json  coverage.json  llms-full.txt  llms.txt  manifest  new_inertia_bug.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.agent/: flows.md
.claude/: mcp-strategy.md
.claude/agents/: docs-reviewer.md  docs-vision.md  expert.md  prd.md  sync-guides.md  testing.md
.claude/commands/: assets.md  bootstrap.md  explore.md  fix-issue.md  implement.md  prd.md  review.md  sync-llms-txt.md  test.md  typegen.md  update-templates.md
.gemini/: GEMINI.md  settings.json
.gemini/commands/: bootstrap.toml  diagnose.toml  explore.toml  fix-issue.toml  implement.toml  prd.toml  review-docs.toml  review.toml  sync-guides.toml  sync-llms-txt.toml  test.toml  update-templates.toml
.gemini/context/: code-style.md  inertia.md  litestar.md  react.md  svelte.md  testing.md  vite.md  vue.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  docs-preview.yaml  docs.yaml  docs.yml  e2e-examples.yml  publish.yaml  publish.yml  test.yml
docs/: PYPI_README.md  changelog.rst  conf.py  demos.rst  index.rst
docs/_static/: code.css  layout.css  theme.css  theme.js
docs/_tapes/: assets-cli.tape  hmr.tape  production-build.tape  scaffolding.tape  type-generation.tape
docs/frameworks/: angular.rst  astro.rst  htmx.rst  index.rst  inertia.rst  nuxt.rst  react.rst  svelte.rst  sveltekit.rst  vue.rst
docs/inertia/: asset-versioning.rst  configuration.rst  csrf-protection.rst  deferred-props.rst  error-handling.rst  file-uploads.rst  flash-data.rst  forms.rst  fullstack-example.rst  how-it-works.rst  index.rst  installation.rst  links.rst  load-when-visible.rst  merging-props.rst  once-props.rst  pages.rst  partial-reloads.rst  polling.rst  precognition.rst  prefetching.rst  remembering-state.rst  responses.rst  routing.rst  shared-data.rst  shared-props-typing.rst  templates.rst  type-generation.rst  typed-page-props.rst  validation.rst
docs/reference/: cli.rst  codegen.rst  commands.rst  config.rst  deploy.rst  exceptions.rst  html_transform.rst  index.rst  loader.rst  plugin.rst  spa.rst  template_engine.rst
docs/tutorials/: advanced-config.rst  getting-started.rst  index.rst  inertia-react.rst  scaffolding.rst  vue-integration.rst
docs/usage/: development.rst  index.rst  inertia.rst  migration-0-14.rst  migration-v015.rst  migration-v2.rst  modes.rst  production.rst  static-props.rst  types.rst  vite.rst
examples/: README.md
examples/angular/: README.md  app.py  index.html  openapi-ts.config.ts  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
examples/angular-cli/: .gitignore  README.md  angular.json  app.py  openapi-ts.config.ts  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
examples/astro/: .gitignore  app.py  astro.config.mjs  hey-api.config.ts  openapi-ts.config.ts  package.json
examples/astro-api/: app.py  astro.config.mjs  package.json
examples/basic/: app.py  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/flash/: app.py  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/fullstack-typed/: app.py  package.json  vite.config.ts
examples/htmx/: package.json  tsconfig.json  vite.config.ts
examples/htmx-no-jinja/: README.md  app.py  index.html  package.json  vite.config.ts
examples/inertia/: app.py  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
examples/jinja/: .gitignore  README.md  app.py  gunicorn_conf.py  package-lock.json  package.json  requirements.txt  vite.config.ts
examples/jinja-htmx/: app.py  package.json  tsconfig.json  vite.config.ts
examples/nuxt/: .gitignore  app.py  app.vue  hey-api.config.ts  nuxt.config.ts  openapi-ts.config.ts  package.json  tsconfig.json
examples/nuxt-api/: app.py  app.vue  nuxt.config.ts  package.json
examples/react/: app.py  index.html  package.json  tsconfig.json  vite.config.ts
examples/react-inertia/: app.py  index.html  package.json  tsconfig.json  vite.config.ts
examples/react-inertia-jinja/: app.py  index.html  package.json  tsconfig.json  vite.config.ts
examples/react-router/: README.md  app.py  index.html  package.json  tsconfig.json
examples/react-tanstack/: app.py  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
examples/spa-react/: .gitignore  app.py  index.html  package.json  tsconfig.json  vite.config.ts
examples/spa-svelte/: app.py  index.html  package.json  vite.config.ts
examples/spa-vue/: .gitignore  README.md  app.py  index.html  package.json  tsconfig.json  vite.config.ts
examples/spa-vue-inertia/: README.md  app.py  index.html  package.json  tsconfig.json  vite.config.ts
examples/svelte/: app.py  index.html  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
examples/svelte-inertia/: README.md  app.py  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
examples/svelte-inertia-jinja/: README.md  app.py  index.html  package.json  tsconfig.json
examples/sveltekit/: app.py  openapi-ts.config.ts  package.json  svelte.config.js  vite.config.ts
examples/sveltekit-api/: app.py  package.json  svelte.config.js  vite.config.ts
examples/tailwind/: app.py  package.json
examples/template-htmx/: app.py  package.json  vite.config.ts
examples/vanilla/: app.py  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/vue-inertia-jinja/: app.py  hey-api.config.ts  package.json  tsconfig.app.json  tsconfig.json
examples/vue-inertia-jinja-ssr/: README.md  app.py  index.html  package.json  tsconfig.app.json
litestar_vite/: __init__.py  cli.py  commands.py  config.py  controllers.py  loader.py  plugin.py  template_engine.py
tests/: conftest.py  docker-compose.yml  test_commands.py  test_config.py  test_template_engine.py
tools/: build_docs.py  clean.js  generate_examples.py  hatch_build.py
(+733 files in other folders)
