[project]
authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
classifiers = [
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
  "litestar>=2.7.0",
  "httpx>=0.24.1",
  "websockets>=12.0",
  "typing_extensions"
]
description = "Vite plugin for Litestar"
keywords = ["litestar", "vite"]
license = { text = "MIT" }
name = "litestar-vite"
readme = "README.md"
requires-python = ">=3.10"
version = "0.16.4"

[project.urls]
Changelog = "https://litestar-org.github.io/litestar-vite/latest/changelog"
Discord = "https://discord.gg/X3FJqy8d2j"
Documentation = "https://litestar-org.github.io/litestar-vite/latest/"
Homepage = "https://litestar-org.github.io/litestar-vite/latest/"
Issue = "https://github.com/litestar-org/litestar-vite/issues/"
Source = "https://github.com/litestar-org/litestar-vite"

[project.optional-dependencies]
jinja = [ "jinja2"]
nodeenv = ["nodeenv"]
http2 = ["h2>=4.0.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]
include = ["src/py/*","src/js/*","tools/*","package.json","package-lock.json"]
force-include = { "src/py/litestar_vite/static/server-starting.html" = "src/py/litestar_vite/static/server-starting.html" }

[tool.hatch.build.targets.sdist.hooks.custom]
path = "tools/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py/litestar_vite"]
include = ["src/py/litestar_vite/static/*.html"]
force-include = { "src/py/litestar_vite/static/server-starting.html" = "litestar_vite/static/server-starting.html" }

[tool.hatch.build.targets.wheel.hooks.custom]
path = "tools/hatch_build.py"

[dependency-groups]
dev = [ {include-group = "build"}, { include-group = "linting" }, { include-group = "test" }, { include-group = "docs" }  ]
build = ["bump-my-version"]
docs = [
    "auto-pytabs[sphinx]>=0.4.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=4.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-toolbox>=3.5.0",
    "sphinx>=7.1.2",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-paramlinks>=0.6.0",
    "sphinx-togglebutton>=0.3.2",
    "Pygments","vue-lexer","jsx-lexer",
    "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git@v3",
]
linting = ["pre-commit>=3.4.0", "mypy>=1.5.1", "ruff>=0.0.287", "types-docutils", "slotscheck",  "pyright"]
test = [
  "fsspec",
  "litestar[standard,cryptography,jwt,jinja]",
  "litestar-granian[uvloop]",
  "sniffio",
  "pytest>=7.4.1",
  "pytest-cov",
  "coverage",
  "pytest-asyncio",
  "pytest-sugar",
  "pytest-mock>=3.11.1",
  "pytest-xdist>=3.6.1",
  "pytest-timeout>=2.0.0",
  "httpx>=0.24.1",
]

[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.16.4"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to `v{new_version}`"
# Parse supports pre-release versions like 0.15.0-alpha.1, 0.15.0-beta.2, 0.15.0-rc.1
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    (-(?P<pre>alpha|beta|rc)\\.(?P<pre_n>\\d+))?
"""
regex = false
replace = "{new_version}"
search = "{current_version}"
# Serialize order: stable first (used when pre is "stable"), then pre-releases
serialize = [
    "{major}.{minor}.{patch}",
    "{major}.{minor}.{patch}-{pre}.{pre_n}",
]
sign_tags = false
tag = false
tag_message = "chore(release): v{new_version}"
tag_name = "v{new_version}"

# Pre-release stage configuration
# "stable" is used internally to represent no pre-release suffix
[tool.bumpversion.parts.pre]
optional_value = "stable"
first_value = "stable"
values = ["alpha", "beta", "rc", "stable"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = "package-lock.json"
replace = """
  "name": "litestar-vite-plugin",
  "version": "{new_version}",
"""
search = """
  "name": "litestar-vite-plugin",
  "version": "{current_version}",
"""

[[tool.bumpversion.files]]
filename = "package-lock.json"
replace = """
      "name": "litestar-vite-plugin",
      "version": "{new_version}",
"""
search = """
      "name": "litestar-vite-plugin",
      "version": "{current_version}",
"""

[tool.pytest.ini_options]
addopts = ["-q", "-ra"]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::PendingDeprecationWarning:rich_click.*",
  "ignore:`use_markdown=`:PendingDeprecationWarning",
  "ignore:`use_rich_markup=`:PendingDeprecationWarning",
  "ignore:`show_metavars_column=`:PendingDeprecationWarning",
  "ignore:`append_metavars_help=`:PendingDeprecationWarning",
  # Litestar typing warnings - from litestar's Parameter annotation handling
  "ignore:Deprecated default value specification:DeprecationWarning:litestar.*",
  "ignore:Ambiguous default values:litestar.utils.warnings.LitestarWarning:litestar.*",
]
testpaths = ["tests", "src/py/tests"]
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 3
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "e2e: end-to-end example tests",
  "spa: SPA example subset",
  "template: template-mode example subset",
  "inertia: inertia example subset",
  "ssr: SSR example subset",
  "cli: CLI example subset",
]

[tool.coverage.report]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover',
  "if __name__ == .__main__.:",
  'def __repr__',
  'if self\.debug:',
  'if settings\.DEBUG',
  'raise AssertionError',
  'raise NotImplementedError',
  'if 0:',
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]
omit = ["*/tests/*"]
show_missing = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
omit = ["src/py/tests/*"]

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
]
fix = true
line-length = 120
lint.fixable = ["ALL"]
lint.ignore = [
  "E501",    # pycodestyle line too long, handled by black
  "D100",    # pydocstyle - missing docstring in public module
  "D101",    # pydocstyle - missing docstring in public class
  "D102",    # pydocstyle - missing docstring in public method
  "D103",    # pydocstyle - missing docstring in public function
  "D104",    # pydocstyle - missing docstring in public package
  "D105",    # pydocstyle - missing docstring in magic method
  "D106",    # pydocstyle - missing docstring in public nested class
  "D107",    # pydocstyle - missing docstring in __init__
  "D202",    # pydocstyle - no blank lines allowed after function docstring
  "D205",    # pydocstyle - 1 blank line required between summary line and description
  "D415",    # pydocstyle - first line should end with a period, question mark, or exclamation point
  "UP037",   # pyupgrade - removes quotes from type annotation
  "A003",    # flake8-builtins - class attribute {name} is shadowing a python builtin
  "B010",    # flake8-bugbear - do not call setattr with a constant attribute value
  "B008",    #  flake8-bugbear - Do not perform function call `Parameter` in argument defaultsRuff(B008)
  "RUF012",  # ruff - mutable class attributes should be annotated with `typing.ClassVar`
  "ANN401",  # ruff - Dynamically typed expressions (typing.Any) are disallowed
  "PLR0913", # ruff - Too many arguments to function call
  "PLR2004", # Magic value used in comparison
  "FBT001",  # Boolean typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FBT003",  # Boolean Boolean default positional argument in function definition
  "ARG002",  # Unused method argument
  "ARG001",  #  Unused function argument
  "TD002",
  "TD003",
  "FIX002",
  "PGH003",
  "RUF006",
  "SLF001",
  "PT007",
  'S603',
  "E501",    # pycodestyle line too long, handled by black
  "PLW2901", # pylint - for loop variable overwritten by assignment target
  "ANN401",
  "FBT",
  "PLR0913", # too many arguments
  "PT",
  "TD",
  "ARG002",  # ignore for now; investigate
  "ARG003",  # ignore for now; investigate
  "PERF203", # ignore for now; investigate
  "PD011",   # pandas
  "PLR0912",
  "ISC001",
  "COM812",
  "CPY001",
  "PGH003",
  "FA100",
  "PLC0415", # import should be at the top of the file
  "PLR0904", # too many public methods
  "PLR0914",
  "PLR0917",
  "PLC2701", # private import
  "S704",
  "S404",
  "PLR6301"
]
lint.select = ["ALL"]
src = ["src/py/litestar_vite", "src/py/tests"]
target-version = "py310"
unsafe-fixes = true
lint.extend-safe-fixes = ["TC"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401', 'D104']
"src/py/litestar_vite/cli.py" = ["RUF001"]
"docs/**/*.*" = ["S", "B", "DTZ", "A", "TC", "ERA", "D", "RET", "E731", "RUF012", "FA100", "ARG001"]
"docs/conf.py" = ["FIX002", "ARG001", "INP001"]
"examples/**/*.*" = ["INP001","RUF029","DOC201"]
"src/py/litestar_vite/plugin.py" = ["BLE001"]  # Intentional broad exception catch in proxy middleware
"src/py/tests/**/*.*" = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C901",
  "D",
  "DTZ",
  "EM",
  "FBT",
  "G",
  "N",
  "PGH",
  "PIE",
  "PLR",
  "PLW",
  "PTH",
  "RSE",
  "S",
  "S101",
  "SIM",
  "TC",
  "TRY",
  "UP006",
  "SLF001",
  "ERA001",
  "RUF029"

]
"tools/*.py" = [ "PLR0911"]

[tool.ruff.lint.isort]
known-first-party = ["litestar_vite", "tests"]
split-on-trailing-comma=false

[tool.pyright]
disableBytesTypePromotions = true
reportPrivateImportUsage = "none"
reportUnknownVariableType = "none"
reportUnnecessaryContains = "none"
exclude = [
  "docs",
  "src/py/tests/unit/test_extensions",
  "src/py/tests/unit/test_repository.py",
  "src/py/tests/helpers.py",
  "src/py/tests/docker_service_fixtures.py",
]
include = ["src/py/litestar_vite"]
pythonVersion = "3.10"
strict = ["src/py/litestar_vite/**/*"]

[tool.mypy]
disallow_untyped_defs = false
files = ["src/py/litestar_vite", "src/py/tests", "tools"]
follow_imports = "normal"          # "silent" for not following
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
disable_error_code = "attr-defined"
disallow_untyped_decorators = false
module = "tests.*"

[tool.codespell]
ignore-words-list = "selectin,te"  # te is a valid HTTP hop-by-hop header (RFC 2616)
skip = 'uv.lock,examples/vue-inertia/package-lock.json,examples/vue-inertia/public/assets/*.js'
